git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "47c01e8"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "47c01e8"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/perl6/doc/doc/Language/traps.pod
+++ b/perl6/doc/doc/Language/traps.pod
@@ -142,7 +142,7 @@ Ways to match whitespace:
 Beginners might expect a variable in a C<Capture> to supply its current
 value when that C<Capture> is later used.  For example:
 
-    $ perl6 -e 'my $a = 2; say join ',', ($a, ++$a)'
+    $ perl6 -e 'my $a = 2; say join ",", ($a, ++$a)'
     3,3
 
 Here the C<Capture> contained the B<container> pointed to by C<$a> and the
@@ -152,7 +152,7 @@ looks inside the container in C<$a> and so it may already be incremented.
 
 Instead, use an expression that produces a value when you want a value.
 
-    $ perl6 -e 'my $a = 2; say join ',', (+$a, ++$a)'
+    $ perl6 -e 'my $a = 2; say join ",", (+$a, ++$a)'
     2,3
 
 =head1 Arrays
@@ -231,7 +231,7 @@ There are methods that Str inherits from Any that work on iterables like lists. 
 
 =head2 Adverbs and Precedence
 
-Adverbs do have a precedence that may not follow the order of operators that is displayed on your screen. If two operators of equal precedence are followed by an adverb it will pick the first operator it find in the abstract syntax tree. Use paranteses to help Perl 6 to understand what you mean or use operators with looser precedence.
+Adverbs do have a precedence that may not follow the order of operators that is displayed on your screen. If two operators of equal precedence are followed by an adverb it will pick the first operator it finds in the abstract syntax tree. Use parentheses to help Perl 6 understand what you mean or use operators with looser precedence.
 
     my %x = a => 42; 
     say !%x<b>:exists;            # dies with X::AdHoc
