--- a/perl6/doc/doc/Language/variables.pod
+++ b/perl6/doc/doc/Language/variables.pod
@@ -988,12 +988,13 @@ the block to the caught exception.
 =head2 Compile-time variables
 
 =for table
-    $?FILE      Which file am I in?
-    $?LINE      Which line am I at?
-    &?ROUTINE   Which routine am I in?
-    &?BLOCK     Which block am I in?
-    %?LANG      What is the current set of interwoven languages?
-    %?RESOURCES The files associated with the "Distribution" of the current compilation unit.
+    $?FILE         Which file am I in?
+    $?LINE         Which line am I at?
+    ::?CLASS       Which class am I in?
+    &?ROUTINE      Which routine am I in?
+    &?BLOCK        Which block am I in?
+    %?LANG         What is the current set of interwoven languages?
+    %?RESOURCES    The files associated with the "Distribution" of the current compilation unit.
 
 Other compile-time variables:
 
@@ -1023,6 +1024,8 @@ Other compile-time variables:
     $*OUT              Standard output filehandle, AKA stdout
     ==
     $*ERR              Standard error filehandle, AKA stderr
+    ==
+    %*ENV              Environment variables
     ==
     $*REPO             A variable holding information about modules installed/loaded
     ==
