--- a/perl6/doc/doc/Type/IO/Spec/QNX.pod
+++ b/perl6/doc/doc/Type/IO/Spec/QNX.pod
@@ -1,6 +1,6 @@
 =begin pod
 
-=TITLE class IO::Spec
+=TITLE class IO::Spec::QNX
 
 =SUBTITLE Platform specific operations on file and directory paths QNX
 
@@ -8,6 +8,8 @@
 
 This sub-class of L<IO::Spec> specific to QNX will be
 available via C<$*SPEC> if the perl is running on QNX.
+
+=head1 Methods
 
 =head2 method canonpath
 
