--- a/perl6/doc/doc/Language/5to6-perlop.pod
+++ b/perl6/doc/doc/Language/5to6-perlop.pod
@@ -100,7 +100,7 @@ use C<@ones = 1 xx 80;>.
 
 =head2 Additive Operators
 
-Binary C<+> and <-> do addition and subtraction, respectively, as you would
+Binary C<+> and C<-> do addition and subtraction, respectively, as you would
 expect..
 
 As C<.> is the method call operator, so binary C<~> acts as the
