--- a/perl6/doc/doc/Language/list.pod
+++ b/perl6/doc/doc/Language/list.pod
@@ -302,7 +302,7 @@ promptly during assignment to the array, if they cannot be caught at compile
 time.  None of the core functions provided in Perl 6 for operating on lists
 should ever produce a wonky typed Array.
 
-Nonexistant elements (when indexed), or elements to which C<Nil> has been assigned,
+Nonexistent elements (when indexed), or elements to which C<Nil> has been assigned,
 will assume a default value.  This default may be adjusted on a variable-by-variable
 basis with the C<is default> trait.  Note that an untyped C<@>-sigiled variable has
 an element type of C<Mu>, however its default value is an undefined C<Any>:
