--- a/perl6/doc/doc/Language/nativecall.pod
+++ b/perl6/doc/doc/Language/nativecall.pod
@@ -399,7 +399,7 @@ exported by the "libc.so.6" library.
 
 NativeCall offer a support to use class and method  from C++ as show in
 L<https://github.com/rakudo/rakudo/blob/nom/t/04-nativecall/13-cpp-mangling.t> (and it associated cpp file)
-But it's not as tested and developped than the C support for now.
+Note that at the moment it's not as tested and developed as C support.
 
 =head1 Examples
 
@@ -413,7 +413,7 @@ More examples can be found L<in the DBIsh repository
 =head2 MySQL
 
 =comment TODO Do we really need this here? Seems like this info should just go
-              along-side that example in the git repo, rathern than replicated
+              along-side that example in the git repo, rather than replicated
               on p6doc.
 
 There is an example of using the MySQL client library. There is a project
