--- a/perl6/doc/doc/Type/Any.pod
+++ b/perl6/doc/doc/Type/Any.pod
@@ -101,6 +101,18 @@ Interprets the invocant as a list, and returns that L<List|/type/List>.
     say 42.list.^name;           # List
     say 42.list.elems;           # 1
 
+=head2 method push
+
+The method push is defined for undefined invocants and allowes to autovivify
+undefined to an empty C<Array>, unless the undefined value implements
+C<Positional> already.  The argument provided will then be pushed into the
+newly created Array.
+
+    my %h;
+    dd %h<a>; # Any (and therefor undefined)
+    %h<a>.push(1); # .push on Any
+    dd %h; # «Hash %h = {:a($[1])}␤» # please not the Array
+
 =head2 routine reverse
 
 Defined as:
