--- a/perl6/doc/doc/Type/Channel.pod
+++ b/perl6/doc/doc/Type/Channel.pod
@@ -20,6 +20,8 @@ one or more producers to one or more consumers.
     $c.close;
     say $c.list;
 
+Further examples can be found in the L<concurrency page|/language/concurrency#Channels>
+
 =head1 Methods
 
 =head2 method send
@@ -128,6 +130,20 @@ Usage:
 Closes the channel (that is, makes subsequent C<send> calls die), and enqueues
 the error as the final element in the channel. Method C<receive> will throw
 the error as an exception.
+
+=head2 method Supply
+
+Defined as:
+
+	method Supply(Channel:D:)
+
+Usage:
+
+	CHANNEL.Supply
+
+This returns an C<on-demand> L<Supply|Supply> that emits a value for every value 
+received on the Channel. C<done> will be called on the C<Supply> when the L<Channel>
+is closed.
 
 =head2 sub await
 
