--- a/perl6/doc/doc/Type/Metamodel/AttributeContainer.pod
+++ b/perl6/doc/doc/Type/Metamodel/AttributeContainer.pod
@@ -55,7 +55,7 @@ this object, that is, if new public attributes are writable by default.
 
 TODO: compose_attributes, get_attribute_for_usage
 
-Also TODO: desribe :local, :excl, :all options of method attributes
+Also TODO: describe :local, :excl, :all options of method attributes
 
 =end comment
 
