--- a/perl6/doc/doc/Type/Routine.pod
+++ b/perl6/doc/doc/Type/Routine.pod
@@ -191,17 +191,14 @@ produces this output:
 
 =begin code
 42
-Saw 1 call to deprecated code during execution.
+Saw 1 occurrence of deprecated code.
 ================================================================================
-Sub f (from GLOBAL) called at:
+Sub f (from GLOBAL) seen at:
   deprecated.p6, line 2
 Please use the literal 42 instead.
 --------------------------------------------------------------------------------
-Please contact the author to have these calls to deprecated code adapted,
-so that this message will disappear!
-
-Please note that *ALL* deprecated features will be removed at the release
-of Perl 6.0.0 (expected sometime in 2015).
+Please contact the author to have these occurrences of deprecated code
+adapted, so that this message will disappear!
 =end code
 
 =head2 trait is hidden-from-backtrace
