--- a/perl6/doc/doc/Type/Str.pod
+++ b/perl6/doc/doc/Type/Str.pod
@@ -466,7 +466,7 @@ Returns the invocant string where C<$matcher> is replaced by C<$replacement>
 There is an in-place syntactic variant of C<subst> spelled
 C<s/matcher/replacement>.
 
-C<$matcher> an be a L<Regex>, or a literal C<Str>. Non-Str matcher arguments
+C<$matcher> can be a L<Regex>, or a literal C<Str>. Non-Str matcher arguments
 of type L<Cool> are coerced to C<Str> for literal matching.
 
     my $some-string = "Some foo";
@@ -518,6 +518,7 @@ object representing the successful match, or C<Any> otherwise.
     my $match = $some-string.subst-mutate(/foo/, "string");
     say $some-string;  #-> Some string
     say $match;        #-> ｢foo｣
+    $some-string.subst-mutate(/<[oe]>/, '', :g); # remove all o'ss and e's, notice the :g named argument from .subst
 
 =head2 routine substr
 
