--- a/perl6/doc/doc/Type/X/NoDispatcher.pod
+++ b/perl6/doc/doc/Type/X/NoDispatcher.pod
@@ -6,8 +6,9 @@
 
     class X::NoDispatcher is Exception { }
 
-Error thrown when a redispatcher like C<nextsame> is called without being in the
-dynamic scope of a call that could possible redispatch.
+When a redispatcher like C<nextsame> is called without being in the
+dynamic scope of a call where a redispatch is possible, an X::NoDispatcher is
+thrown.
 
 For example
 
